--- a/package.json
+++ b/package.json
@@ -17,13 +17,20 @@
     "@tailwindcss/postcss": "^4.1.17",
     "autoprefixer": "^10.4.22",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
+    "lucide-react": "^0.559.0",
     "next": "^16.0.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.3",
     "@eslint/eslintrc": "^3.3.1",
+    "@storybook/addon-a11y": "^10.1.6",
+    "@storybook/addon-docs": "^10.1.6",
+    "@storybook/addon-vitest": "^10.1.6",
+    "@storybook/nextjs-vite": "^10.1.6",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.19.25",
     "@types/react": "^19.2.4",
@@ -31,6 +38,8 @@
     "@types/react-transition-group": "^4.4.12",
     "@typescript-eslint/eslint-plugin": "^8.47.0",
     "@typescript-eslint/parser": "^8.47.0",
+    "@vitest/browser-playwright": "^4.0.15",
+    "@vitest/coverage-v8": "^4.0.15",
     "baseline-browser-mapping": "^2.9.5",
     "eslint": "^9.39.1",
     "eslint-config-next": "15.1.3",
@@ -39,23 +48,16 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-storybook": "^10.1.6",
+    "playwright": "^1.57.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-eslint": "^16.4.2",
     "prettier-plugin-tailwindcss": "^0.7.1",
+    "storybook": "^10.1.6",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
-    "storybook": "^10.1.6",
-    "@storybook/nextjs-vite": "^10.1.6",
-    "@chromatic-com/storybook": "^4.1.3",
-    "@storybook/addon-vitest": "^10.1.6",
-    "@storybook/addon-a11y": "^10.1.6",
-    "@storybook/addon-docs": "^10.1.6",
     "vite": "^7.2.7",
-    "eslint-plugin-storybook": "^10.1.6",
-    "vitest": "^4.0.15",
-    "playwright": "^1.57.0",
-    "@vitest/browser-playwright": "^4.0.15",
-    "@vitest/coverage-v8": "^4.0.15"
+    "vitest": "^4.0.15"
   }
 }
